Fixed overflow of main element. Changed email in base template to use the @ sign.

--- a/static/css/redwood.css
+++ b/static/css/redwood.css
@@ -128,6 +128,7 @@ main {
     main {
         padding: 1em;
         width: 100%;
+        box-sizing: border-box;
     }
 }
 
